# vehicle-engine

./: .gitignore
code/: CMakeLists.txt
code/assets/models/: Cube.mtl.bak
code/assets/models/demo/car/: car.mtl
code/assets/models/demo/tank/: tank.mtl
code/assets/models/game/booster/: booster.mtl
code/assets/models/game/ghost-vehicle/: ghost-vehicle.mtl
code/assets/models/game/goal/: goal.mtl
code/assets/models/game/guides/: guides.mtl  single-guide.mtl
code/assets/models/game/manipulation/: manipulation.mtl
code/assets/models/game/powerUpDown/: power-down.mtl  power-up.mtl
code/assets/models/game/prism/: prism.mtl
code/assets/models/game/rt1/: Racetrack01-with-mat.mtl
code/assets/models/game/rt2/: Racetrack02-with-mat.mtl
code/assets/models/game/rt3/: Racetrack03-with-mat.mtl
code/assets/models/game2/arena/: Arena-Ground.mtl  Arena-Outside.mtl
code/assets/models/game2/projectile/: projectile.mtl
code/assets/models/game2/woods/: Woods.mtl
code/assets/shaders/debug/: debugFragmentShader.glsl  debugVertexShader.glsl
code/assets/shaders/particle/: particle-fragment-shader.glsl  particle-mesh-fragment-shader.glsl  particle-mesh-vertex-shader.glsl  particle-vertex-shader.glsl
code/assets/shaders/phong/: blinn-phong-fragment-shader.glsl  blinn-phong-vertex-shader.glsl  fragmentShader.glsl  vertexShader.glsl
code/assets/shaders/skybox/: skybox-fragment-shader.glsl  skybox-vertex-shader.glsl
code/audio/: CMakeLists.txt
code/audio/include/engine/audio/: Audio.h
code/audio/src/: Audio.cpp
code/audio/src/components/: CAudio.cpp
code/demo/: CMakeLists.txt
code/demo/src/: Game.cpp  Game.h  main.cpp
code/demo/src/world/environment/: ACube.cpp  ACube.h  APlatform.cpp  APlatform.h
code/demo/src/world/vehicles/: ADemo4WVehicle.cpp  ADemo4WVehicle.h  ADemoRaycastVehicle.cpp  ADemoRaycastVehicle.h  ADemoTank.cpp  ADemoTank.h
code/engine/: CMakeLists.txt
code/engine/include/engine/: Engine.h  Engine_NS.h
code/engine/include/engine/callbacks/: ComponentEvent.h  Event.h
code/engine/include/engine/components/: CComponent.h  ComponentPool.h
code/engine/include/engine/context/: Context.h
code/engine/include/engine/entities/: Entity.h  EntityPool.h
code/engine/include/engine/internal/: typesafe_id.h
code/engine/include/engine/math/: Math.h
code/engine/include/engine/random/: Random.h
code/engine/include/engine/system/: System.h
code/engine/include/engine/world/: AActor.h  World.h
code/engine/src/: Engine.cpp
code/engine/src/components/: CComponent.cpp
code/engine/src/context/: Context.cpp
code/engine/src/entities/: Entity.cpp  EntityPool.cpp
code/engine/src/world/: AActor.cpp  World.cpp
code/game/: CMakeLists.txt
code/game/src/: Game.cpp  Game.h  main.cpp
code/game/src/enums/: ECarState.h  EItem.h
code/game/src/gamemode/: Gamemode.h  PointGamemode.cpp  PointGamemode.h
code/game/src/levels/: Arena01.cpp  Arena01.h  Level.h  PhysicsPlayground.cpp  PhysicsPlayground.h  Racetrack01.cpp  Racetrack01.h  Racetrack02.cpp  Racetrack02.h  Racetrack03.cpp  Racetrack03.h
code/game/src/physics/: MyCollisionCallback.h  MyCollisionReponse.h
code/game/src/windows/: WCircuitEnd.cpp  WCircuitEnd.h  WItemWindow.cpp  WItemWindow.h  WResultsWindow.cpp  WResultsWindow.h  WScoreWindow.cpp  WScoreWindow.h  WStartingWindow.cpp  WStartingWindow.h  WTimerWindow.cpp  WTimerWindow.h
code/game/src/world/: ACar.cpp  ACar.h  AMyActor.h  Car4W.cpp  Car4W.h
code/game/src/world/level/: ABooster.cpp  ABooster.h  ACheckpoint.cpp  ACheckpoint.h  ADeathPlane.cpp  ADeathPlane.h  AGoal.cpp  AGoal.h  AGuide.cpp  AGuide.h  AItem.cpp  AItem.h  ARespawnPlane.cpp  (+1 more)
code/memory/: CMakeLists.txt
code/memory/src/: memory.cxx
code/physics/: CMakeLists.txt
code/physics/src/: Physics.cpp
code/physics/src/vehicle/: VehicleManager.cpp
code/physics/src/windows/: WDebugWindow.cpp
code/physics/src/world/: AHeightField.cpp  ARaycastVehicle.cpp  ARaycastVehicle4Wheeled.cpp  ATank.cpp
code/renderer/: CMakeLists.txt
code/renderer/src/: Mesh.cpp  Renderer.cpp  Shader.cpp  SkyBox.cpp
code/renderer/src/components/: CCamera.cpp  CLight.cpp  CMesh.cpp  CModel.cpp  CParticleEmitter.cpp
code/renderer/src/manager/: ModelManager.cpp  TextureManager.cpp
code/renderer/src/particle/: ParticleSystem.cpp
code/renderer/src/world/: ACamera.cpp  ACinematicCamera.cpp  AEmissiveMesh.cpp  ALight.cpp  AMesh.cpp
code/scene/: CMakeLists.txt
code/scene/src/: Scene.cpp  SceneGraph.cpp  TreeTraverser.cpp
code/scene/src/components/: CRotation.cpp  CScale.cpp  CStepRotation.cpp  CTransform.cpp  CTranslation.cpp
code/ui/: CMakeLists.txt
code/ui/src/: UserInterface.cpp
code/ui/src/windows/: WNuklearDemo.cpp
(+79 files in other folders)
